# tsj_audit

./: .env.example  .gitignore  .goreleaser.yml  README.md  cli.py  config.py  go.mod  langgraph.json  main.py  models.py  opencode.json  pyproject.toml  sample.html  scan.py  scan_rpc.py  test_session.py  test_tools.py  trace_results.html  trace_results.json  trace_results.txt
.agents/skills/civetweb_audit/: SKILL.md
.agents/skills/civetweb_audit/scripts/: scan.py
.github/workflows/: ci.yml  release.yml
agents/: __init__.py  agent_runtime_runner.py  audit_agent.py  audit_specs.py  base.py  brute_force_agent.py  code_audit_agent.py  command_inject_agent.py  deepagents_audit_runner.py  deepagents_exploit_runner.py  deepagents_trace_explorer.py  entry_discovery_agent.py  exploit_agent.py  loop_vulnerability_agent.py  output_schemas.py  password_reset_agent.py  path_traversal_agent.py  runtime_factory.py  studio_graph.py  trace_agent.py  trace_workflow.py
agents/prompt/: __init__.py  brute_force_prompt.py  command_inject_prompt.py  path_traversal_prompt.py  trace_prompt.py  trace_tool_guide.py
agents/runtime_clients/: __init__.py  base.py  claudecode.py  codex.py  command.py  opencode.py
audit_results/: audit_config.json
audit_results/checkpoints/: handle_file.json  handle_read.json  handle_search.json  handle_system.json
audit_results2/: audit_config.json  trace_results_20260319_034634.html  trace_results_20260319_034634.json
audit_results2/checkpoints/: db_note_create.json  db_user_create.json  handle_check_old_password.json  handle_create_note.json  handle_delete_note.json  handle_force_delete_note.json  handle_get_ftp_config.json  handle_get_note.json  handle_get_notes.json  handle_index.json  handle_login.json  handle_ping.json  handle_register.json  handle_reset_password.json  handle_restore_note.json  handle_rpc_request.json  handle_save_ftp_config.json  handle_update_ftp_config.json  handle_update_note.json  handle_upload_logo.json  handle_upload_notes.json  handle_upload_notes_to_ftp.json
audit_specs/: brute_force.yaml  command_injection.yaml  ioctl_user_buffer_overflow.yaml  ioctl_user_kernel_boundary.yaml  loop.yaml  password_reset.yaml  path_traversal.yaml
cmd/civetweb_audit/: main.go  main_test.go
cmd/export-results/: main.go
cmd/ioctl_audit/: main.go  main_test.go
cmd/manage-extensions/: main.go
cmd/scan/: main.go
cmd/tsj-audit/: main.go  main_test.go
cmd/verify-go-refactor/: main.go
docs/: go_refactor.md  live_runtime_smoke.md  shell_docker_mode.md  shell_session.md  tags_tool.md  tool_architecture.md
examples/: docker_demo.py
internal/checkpoint/: store.go  store_test.go
internal/config/: config.go  config_test.go
internal/export/: export.go  export_test.go
internal/extensions/: server.go  server_test.go
internal/models/: models.go  models_test.go  outputs.go
internal/opencodeconfig/: config.go  config_test.go
internal/pipeline/: pipeline.go  pipeline_test.go
internal/prompt/: prompt.go  prompt_test.go
internal/runtime/: command.go  command_test.go  echo_mock.go  echo_mock_test.go  mock.go  opencode.go  opencode_permission.go  opencode_test.go  runtime.go  runtime_test.go
internal/scanner/: entry.go  entry_test.go  native.go  native_test.go  python_scan.go  python_scan_test.go
internal/schema/: schema.go  schema_test.go
internal/skills/: skills.go  skills_test.go
internal/specs/: specs.go  specs_test.go
internal/status/: server.go  server_test.go  service.go  service_test.go  status.go  status_test.go
knowledge/c/civetweb/: input.md  scan.py
output/: audit_config.json
scripts/: README.md  build_index.py  export_results.py  manage_extensions.py  scan.py  scan_ioctl.py  verify_agent_runtime_migration.py  verify_entry_discovery.py  verify_entry_spec_hydration.py  verify_export_html.py  verify_export_markdown.py  verify_langgraph_migration.py  verify_multi_finding_audit.py  verify_relative_file_paths.py
skills/attack_surface/civetweb_audit/: SKILL.md
skills/attack_surface/ioctl_audit/: SKILL.md
skills/attack_surface/ioctl_audit/scripts/: scan.py
skills/rpc_communication/: REFERENCE.md  SKILL.md
skills/rpc_communication/scripts/: analyze_rpc_flow.py
test_code/: .cscope-files  .ctags-files  example.c  example.h  tags
test_project/: .cscope-files  .ctags-files  .gitignore  CMakeLists.txt  README.md  cscope.out  cscope.out.in  cscope.out.po  main.c  response.txt  scan.py  tags
test_project/rpc_demo/: .cscope-files  .ctags-files  README.md  cscope.out  cscope.out.in  cscope.out.po  handler.c  rpc.h  rpc_client  rpc_client.c  rpc_common.c  rpc_server.c  tags
test_project/src/: db.c  db.h  main_web.c  main_worker.c  note_logic.c  note_logic.h  rpc.c  rpc.h  utils.c  utils.h
test_project/www/: app.js  index.html
tests/: test_config_file.py  test_main_opencode_health.py  test_opencode_runtime.py  test_terminal_status.py
tools/: __init__.py  agent_tool.py  executor.py  file_tool.py  prompt_generator.py  registry.py  shell_tool.py  skills_tool.py  tags_mcp_server.py  tags_tool.py
utils/: __init__.py  chat_model.py  deepagents_output.py  deepagents_runtime.py  export_utils.py  llm_client.py  logged_backend.py  path_utils.py  runtime_skills.py  structured_output.py  terminal_status.py  tool_call_guard.py  tool_call_logger.py  web_status.py
web/: __init__.py  check_ui.js  check_ui.py  database.py  extensions_manager.html  init_db.py  main.py  models.py  requirements.txt
web/api/: routes.py
web/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: App.vue  main.js
web/frontend/src/assets/: styles.css
web/frontend/src/components/: AdminLogin.vue  LoginView.vue
web/frontend/src/layouts/: MainLayout.vue
web/frontend/src/router/: index.js
web/frontend/src/utils/: api.js
web/frontend/src/views/: AuditView.vue  DashboardView.vue  ResultsView.vue  ScanView.vue  SkillsView.vue  TaskDetailView.vue  UserManagementView.vue
web/services/: audit_service.py  scan_service.py
(+1 files in other folders)
